# slices-of-pi

./: .gitignore  .karpathy-session.md  AGENTS.md  ARCHITECTURE.md  CAPABILITY_AUDIT.md  DESIGN.md  FINAL_PLAN.md  FUTURE_TIER4.md  IMPLEMENTATION_PLAN.md  NEXT_PHASES_PLAN.md  PI_VS_TRINITY_COMPARISON.md  PLAN-maestro-execution.md  PROJECT_STATE.md  README.md  SANITIZATION_GUIDE.md  install.sh  pyproject.toml  slices  start-orchestrator.py
.github/workflows/: ci.yml
dashboard/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.node.json  vite.config.ts
dashboard/src/: App.vue  main.ts
dashboard/src/assets/: main.css
dashboard/src/components/: ActivityFeed.vue  AgentCard.vue  AgentDetail.vue  AppShell.vue  CapacityMeter.vue  ChatPanel.vue  CommandPalette.vue  ComsPanel.vue  ConnectorsPanel.vue  CredentialsPanel.vue  (+34 more)
docs/: HEALTH_AUDIT_ORCHESTRATION_PLAN.md  PRODUCT_INTENT.md  README.md  architecture.md
docs/archive/: .karpathy-session.md  CAPABILITY_AUDIT.md  FRAME_VIZ_REPORT.md  PRODUCTIZATION_PATH.md  README.md  UNRELATED-BUILD_PLAN-digia.md  VOICE_FLIXZ_PLAN.md  memory-handoff-map.md
docs/health/: BACKEND_REVIEW.md  CONTRACTS_VERDICT.md  E2E_PROBE.md  FLIXZ_STT_PLAN.md  FRONTEND_REVIEW.md  GAP_MATRIX.md  HEALTH_BRIEF.md  INVENTORY.md  OPERATOR_UX_1_3_PLAN.md  OPERATOR_UX_PLAN.md  ROADMAP.md  SECURITY_NOTES.md  TARGET.md  TEST_REPORT.md  TRACK_A_STATUS.md  TRACK_B_STATUS.md  TRACK_C_STATUS.md  TRACK_D_STATUS.md
docs/ops/: CLAUDE_OAUTH_SETUP.md
pi-coding-agent/: .docgraph_extract.json  EXTRACTION_SUMMARY.json  GRAPH_REPORT.md  graph.html  graph.json
pi-mcp-server/: package-lock.json  package.json
pi-mcp-server/src/: server.ts
pi_orchestrator/: config.py  database.py  logging_config.py  main.py  models.py  pyproject.toml
pi_orchestrator/routers/: activities.py  agents.py  audit_log.py  auth.py  chat.py  coms.py  connectors.py  console.py  credentials.py  events.py  extensions.py  files.py  flixz.py  git.py  mcp_keys.py  operator_queue.py  ops.py  profile.py  schedules.py  sessions.py  settings_router.py  sharing.py  skills.py  system.py  tags.py  teams.py  telemetry.py  templates.py  terminal.py  users.py  voice.py  ws_tickets.py
pi_orchestrator/services/: agent_profile_service.py  audit_service.py  cleanup_service.py  event_bus.py  flixz_service.py  frame_description_service.py  git_service.py  parakeet_asr.py  pi_session_service.py  schedule_service.py  shared_memory_service.py  system_chat_service.py  tts_service.py  voice_service.py  ws_ticket_service.py
pi_orchestrator/services/connectors/: __init__.py  _base.py  engine.py  registry.py
pi_orchestrator/services/connectors/builtins/: __init__.py  webhook.py
slice_of_pi/: __init__.py  shared.py
slice_of_pi/core/: __init__.py  _capability.py  _credentials.py  _lifecycle.py
slice_of_pi/execution/: __init__.py  _execution_environment.py  _guardrail_hook.py
slice_of_pi/infra/: __init__.py  _platform_deployment.py  _schedule_engine.py  _template_engine.py
slice_of_pi/interfaces/: frontend.ts  index.ts
slice_of_pi/orchestration/: __init__.py  _agent_client.py  _agent_runtime.py  _channel_adapter.py  _cli.py  _cli_plugin.py  _event_bus.py  _output.py  _skill_provider.py  _workflow_engine.py
slice_of_pi/specification/: __init__.py  _agent_manifest.py  _system_manifest.py
slice_of_pi/testing/: __init__.py  _fixtures.py  _scenarios.py
tests/: conftest.py  test_activities_api.py  test_agent_profile_service.py  test_agents_api.py  test_chat_api.py  test_coms_api.py  test_connectors.py  test_credentials_api.py  test_database.py  test_e2e_api.py  test_event_bus.py  test_events_ws.py  test_extensions_api.py  test_files_path.py  test_flixz.py  test_flixz_paths.py  test_health_api.py  test_new_services.py  test_orchestrator_config_api.py  test_parakeet_asr.py  test_pi_session_service.py  test_profile_api.py  test_schedule_session_path.py  test_schedules_api.py  test_sessions_api.py  test_shared_memory_service.py  test_skills_api.py  test_teams_api.py  test_templates_api.py  test_terminal.py  test_terminal_e2e.py  test_terminal_workspace.py  test_voice.py
(+42 files in other folders)
