[project]
name = "slice-of-pi"
version = "0.1.0"
description = "Abstract contract package (ABCs/Protocols) for agent interfaces — NOT the runnable app. The product is pi_orchestrator + dashboard (local single-operator pi fleet manager). See docs/PRODUCT_INTENT.md."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "rich>=13.0",
]
license = {text = "MIT"}
authors = [{name = "Slice Of Pi"}]
keywords = ["agent", "orchestration", "framework", "stubs", "interfaces", "contracts"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.8",
]

[tool.ruff]
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
asyncio_default_test_loop_scope = "function"

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["slice_of_pi*"]
