[project]
name = "pi-orchestrator"
version = "0.1.0"
description = "Pi Orchestrator — local single-operator API + dashboard for multiple pi coding agents (the runnable product; not SaaS)"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "Slice Of Pi"}]
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.0",
    "apscheduler>=3.10",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
    "ruff>=0.8",
]
# Secondary STT: Parakeet ONNX (Handy model dir). Requires Python ≥3.10.
#   pip install 'pi-orchestrator[parakeet]'   # or: python3.11 -m pip install 'onnx-asr[cpu]'
parakeet = [
    "onnx-asr[cpu]>=0.10",
]

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["pi_orchestrator*"]
